[package]
name = "rock"
version = "0.1.0"
edition = "2024"

authors = ["snowman01956172@gmail.com"]
description = "A terminal-based music player built with Rust"
license = "MIT"
repository = "https://github.com/Nonoyanping/rock"

[dependencies]
# Audio playback and processing
rodio = "0.21"
symphonia = { version = "0.5", features = ["all"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# File system and metadata
walkdir = "2.4"
lofty = "0.22"  # Audio metadata parsing
dirs = "6.0"    # Platform-specific directories

# Data structures and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# Configuration management
config = "0.15"
toml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.8"
